package Main;

public abstract class Events extends Exception{
    public Events(String message){
        super(message);
    }
}
