package Main;

public  abstract class Circumstances {
    protected String description;

    public Circumstances() {
    }

    public String getDescription() {
        return description;
    }

    public void setDescription(String description) {
        this.description = description;
    }
}
